get list room of user, get list message of conversation
